5 Dec 2024: -temporarily wrap up development and spruce comments for upcoming demonstration. -last work stops at linking fb create post feature to add_post page. -WIP: FB api -next: exam score timeline

--- a/public/style.css
+++ b/public/style.css
@@ -861,7 +861,7 @@ p.large-text.ch {
     min-height: 39px;
 }
 
-#profile button img {
+button.btn-fb img  {
     height: 23px;
     width: auto;
     object-fit: contain;
