--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -398,7 +398,7 @@ p.large-text.ch {
     min-height: 39px;
 }
 
-#profile button img {
+button.btn-fb img  {
     height: 23px;
     width: auto;
     object-fit: contain;
